# Sylar

./: .clang-format  .gdb_history  .gitignore  AGENTS.md  A_代码相关问题集  A_非代码问题集  A_项目整体待解决事项  A_项目规范  CMakeLists.txt  Doxygen.config  README.md  bugHandle  generate.sh  log.txt  mutex.txt  problemSet  system.txt  需要认识的linux命令
.VSCodeCounter/2026-06-20_11-16-46/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.codex/: 2026-05-28修复HttpConnectionPool连接池.md  2026-05-31统一HTTP客户端超时模型.md  2026-06-01收窄HttpRequestOptions测试边界.md  2026-06-18完成HttpClient第三步.md  2026-06-18实现HttpClient多实例负载均衡前半部分.md  2026-06-18实现HttpClient失败重试.md  2026-06-19-完成第五步负载均衡后半部分.md  2026-06-19实现HTTP客户端限流保护.md  2026-06-20实现熔断降级.md  2026-06-21AI网关限流设计纠正.md  2026-06-21项目健康度审计.md  2026-06-22问题修复拆分方案排查.md  2026-06-23-AI网关模块配置加载时机.md  2026-06-24-G3演示日志缺失.md  2026-06-24-module_lifecycle基线构建目标缺失.md  2026-06-25-G5状态接口IDE头文件索引报错.md  2026-06-25-G5误写worktree同步主仓库.md  2026-06-25-G5验证时loopback沙箱限制.md  2026-06-25AI网关方案实现状态核查.md  2026-06-25实现AI网关G4.md  2026-06-25清理ai-gateway-g3-worktree.md  2026-06-26-demo脚本mock-c-normal后退出.md  2026-06-26-demo脚本mock-c启动卡住.md  2026-06-26-修复AiGatewayDemoServlet声明定义不匹配.md  2026-06-26-解释网关请求成功但recv失败日志.md  2026-06-27-核实真实提供商网关结构影响.md  2026-06-27完成R2真实Provider适配器.md  2026-06-27完成R3真实Provider共享预算.md  2026-06-27完成真实Provider网关R0R1.md  2026-06-27实现R4真实Provider错误分类.md  2026-06-28实现R5真实Provider治理.md  2026-06-28实现R6离线真实Provider形状验证.md  2026-06-29-排查火山方舟smoke连接超时.md  2026-06-29真实Provider演示网关.md  2026-06-30-真实Provider演示脚本读取配置来源.md  2026-06-30-真实Provider脚本只显示mock排查.md  2026-06-30-真实Provider页面404排查.md  2026-06-30-真实Provider页面请求504排查.md  sylar_scheduler_iomanager_timer_hook_逻辑梳理.md
cmake/: ai_gateway.cmake  sylar_core.cmake  sylar_tests.cmake  utils.cmake
examples/: ai_gateway_real_provider_smoke.cc  ai_gateway_request.json  echo_server.cc  mock_model_provider.cc
examples/ai_gateway_conf/: ai_gateway.yml  server.yml  worker.yml
latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  README_8md.tex  annotated.tex  classsylar_1_1DateTimeFormatItem.tex  classsylar_1_1DateTimeFormatItem__inherit__graph.md5  classsylar_1_1ElapseFormatItem.tex  classsylar_1_1ElapseFormatItem__inherit__graph.md5  classsylar_1_1FiberIdFormatItem.tex  classsylar_1_1FiberIdFormatItem__inherit__graph.md5  classsylar_1_1FileLogAppender.tex  classsylar_1_1FileLogAppender__inherit__graph.md5  classsylar_1_1FileLogAppender_a18a5acae7152079467b070135a67207a_icgraph.md5  classsylar_1_1FileLogAppender_ac13a786e1d0827896acd15a9ee6d0917_cgraph.md5  classsylar_1_1FilenameFormatItem.tex  classsylar_1_1FilenameFormatItem__coll__graph.md5  classsylar_1_1LevelFormatItem.tex  classsylar_1_1LevelFormatItem__coll__graph.md5  classsylar_1_1LevelFormatItem_ac040a11f4eec0644a4b5c1e4c9ffa0b1_cgraph.md5  classsylar_1_1LineFormatItem.tex  classsylar_1_1LineFormatItem__coll__graph.md5  classsylar_1_1LogAppender.tex  classsylar_1_1LogAppender__coll__graph.md5  classsylar_1_1LogAppender__inherit__graph.md5  classsylar_1_1LogEvent.tex  classsylar_1_1LogEventWrap.tex  classsylar_1_1LogEventWrap__coll__graph.md5  classsylar_1_1LogEvent__coll__graph.md5  classsylar_1_1LogFormatter.tex  classsylar_1_1LogFormatter_1_1FormatItem.tex  classsylar_1_1LogFormatter_1_1FormatItem__coll__graph.md5  classsylar_1_1LogFormatter_1_1FormatItem__inherit__graph.md5  classsylar_1_1LogFormatter__coll__graph.md5  classsylar_1_1LogFormatter_a84b8213e503570f4de1655028f7debf3_icgraph.md5  classsylar_1_1LogFormatter_a939b4a2513ad3f27736346f06775369d_cgraph.md5  classsylar_1_1LogLevel.tex  classsylar_1_1LogLevel__coll__graph.md5  classsylar_1_1LogLevel_ac9f6bf27fd46d4964abcfe1c8004be81_icgraph.md5  classsylar_1_1Logger.tex  classsylar_1_1LoggerManager.tex  (+66 more)
modules/ai_gateway/: ai_gateway_demo.html  ai_gateway_demo_servlet.cc  ai_gateway_demo_servlet.h  ai_gateway_module.cc  ai_gateway_protocol.cc  ai_gateway_protocol.h  ai_gateway_servlet.cc  ai_gateway_servlet.h  ai_gateway_status_servlet.cc  ai_gateway_status_servlet.h  ai_gateway_upstream.cc  ai_gateway_upstream.h  ai_provider_adapter.cc  ai_provider_adapter.h  (+6 more)
scripts/: demo_ai_gateway.sh  demo_ai_gateway_real_provider.sh  smoke_ai_gateway_real_provider.sh
sylar/: A_HookBug  A_hook执行过程梳理.txt  A_schduler中尚未解决的问题  address.cc  address.h  application.cc  application.h  bytearray.cc  bytearray.h  config.cc  config.h  daemon.cc  daemon.h  endian.h  env.cc  env.h  fd_manager.cc  fd_manager.h  fiber.cc  fiber.h  hook.cc  hook.h  iomanager.cc  iomanager.h  library.cc  library.h  log.cc  log.h  macro.h  main.cc  module.cc  module.h  mutex.cc  mutex.h  scheduler.cc  scheduler.h  singleton.h  socket.cc  socket.h  socket_stream.cc  (+16 more)
tests/: test.cc  test_address.cc  test_ai_gateway_demo_servlet.cc  test_ai_gateway_load_balance.cc  test_ai_gateway_protocol.cc  test_ai_gateway_real_provider.cc  test_ai_gateway_real_provider_smoke.cc  test_ai_gateway_real_runtime.cc  test_ai_gateway_route_registry.cc  test_ai_gateway_servlet.cc  test_ai_gateway_status.cc  test_application.cc  test_bytearray.cc  test_candidate_selector.cc  test_config.cc  test_daemon.cc  test_demo_ai_gateway_real_provider_script.sh  test_env.cc  test_env_config.cc  test_fiber.cc  test_hook.cc  test_http.cc  test_http_attempt_outcome.cc  test_http_circuit_breaker.cc  test_http_client.cc  test_http_concurrency_limiter.cc  test_http_connection.cc  test_http_connection_pool.cc  test_http_load_balance_client.cc  test_http_parser.cc  test_http_request_options.cc  test_http_server.cc  test_http_session_recv_error.cc  test_iomanager.cc  test_module_config_timing.cc  test_module_lifecycle.cc  test_module_lifecycle_plugin.cc  test_scheduler.cc  test_socket.cc  test_tcp_server.cc  (+8 more)
xyz/: log.cc  log.h
文档/: 2026-07-19-Linux常用命令学习手册实施计划.md  AI模型调用网关方案.md  AI模型调用网关方案草案.md  A_代码相关问题集  A_非代码问题集  A_项目整体待解决事项  A_项目规范  Linux常用命令学习手册.md  Linux常用命令学习手册设计.md  RPC模块任务书-暂时不使用.md  application后续内容  候选选择器重构方案.md  压力测试.md  基础封装速查.md  如何整理项目.md  如何理解项目.md  手动理解项目.md  接下来要做什么.md  目前已扩展的内容.md  真实Provider演示网关任务书.md  真实提供商网关.md  问题修复拆分方案.md
(+68 files in other folders)
